--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>UCAR - Climate Sensitivity Calculator</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" >
+
 <link rel="stylesheet" href="src/css/style.css"/>
 </head>
 <!--
@@ -93,8 +94,9 @@ UCAR - SCIED 2012-2020
 
     </div><!-- end container -->
 
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="src/js/jquery-3.6.0.min.js">\x3C/script>')</script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="src/js/particle/particles.js"></script>
     <script src="src/js/particle/app.js"></script>
@@ -102,3 +104,4 @@ UCAR - SCIED 2012-2020
 </body>
 
 </html>
+
